# kzip

./: Cargo.toml  KZip-0.0.8-x86_64.msi  README.md  test.kzip  todo.md
src/: main.rs
wix/: main.wxs
